# blogMaker

./: .env.example  .gitignore  CLAUDE.md  Gemfile  _config.yml  index.md  pyproject.toml
config/: ai_backlog.yaml  blogs.yaml  categories.ai.yaml  categories.fashion.yaml  categories.yaml  persona.ai.md  persona.fashion.md  persona.md  quality_rules.yaml  sources.ai.yaml  sources.fashion.yaml  sources.yaml
scripts/: absolutize_body_images.py  audit_ai_images.py  clean_articles.py  cleanup_post_bodies.py  migrate_to_beautiful_jekyll.py  migrate_to_chirpy.py  migrate_to_minimal_mistakes.py  report.py  run_cycle.ps1  setup_task.ps1  smoke_v2.py  task_blogmaker.xml
src/: blogs.py  cli.py  config_loader.py  logging_setup.py  main.py
src/backlog/: __init__.py  loader.py  seed.py  selector.py
src/categorize/: classify.py
src/cluster/: embed.py  hdbscan_cluster.py  merge.py  simhash.py
src/collectors/: _rss_common.py  arxiv.py  base.py  bbc.py  google_news_rss.py  hackernews.py  korean_news.py  lobsters.py  reddit.py  registry.py  rss_feed.py
src/images/: __init__.py  markers.py  pexels.py  pollinations.py  unsplash.py
src/llm/: __init__.py  claude_cli.py
src/normalize/: __init__.py  dedupe.py  item.py  text_clean.py
src/persona/: __init__.py  analyzer.py  fetcher.py  merger.py
src/publisher/: __init__.py  asset_copier.py  frontmatter.py  git_push.py  jekyll_writer.py  models.py
src/quality/: ai_smell.py  gate.py  image_check.py  persona_check.py  rules.py  stats.py
src/selector/: followup.py  score.py
src/state/: db.py  repo.py  schema.sql
(+9 files in other folders)
